[package]
name = "rust-file-crypto"
version = "0.1.0"
authors = ["Ayon <ayonsaha2011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
async-channel = "1.4.1"
rust-crypto = "^0.2"
base64 = "*"
clap = "*"